[package]
name = "invisensing-core"
version = "0.2.0"
edition = "2021"
description = "Native Rust core for the Invisensing Python SDK — fast DAT reader and de-interleave kernels for PCIe7821 DAS acquisitions"
license = "MIT"
repository = "https://github.com/invisensing-io/python-lib"
keywords = ["DAS", "fiber-optic", "demodulation", "audace", "pyo3"]
categories = ["science"]

[lib]
# The Python wheel imports this as `invisensing._core` (see lib.rs #[pymodule]).
name = "_core"
crate-type = ["cdylib"]

[dependencies]
# PyO3 binds Rust functions to Python; `extension-module` builds a .so/.pyd that
# Python's import machinery picks up directly (no libpython link at compile time
# — needed for portable wheels under PEP 599 / manylinux).
pyo3 = { version = "0.22", features = ["extension-module"] }
# numpy gives us zero-copy `PyArray1`/`PyArray2` constructors and lets us return
# numpy arrays whose memory is owned by Rust without an extra copy.
numpy = "0.22"

[profile.release]
# Wheels ship release builds; tune for runtime perf over compile time.
lto = "thin"
codegen-units = 1
opt-level = 3
