[package]
name = "invisensing-core"
version = "1.0.1"
edition = "2021"
description = "Native Rust core for the Invisensing Python SDK — fast DAT reader and de-interleave kernels for PCIe7821 DAS acquisitions"
license = "MIT"
repository = "https://github.com/invisensing-io/python-lib"
keywords = ["DAS", "fiber-optic", "demodulation", "audace", "pyo3"]
categories = ["science"]

[lib]
# The Python wheel imports this as `invisensing._core` (see lib.rs #[pymodule]).
name = "_core"
crate-type = ["cdylib"]

[dependencies]
# PyO3 binds Rust functions to Python; `extension-module` builds a .so/.pyd that
# Python's import machinery picks up directly (no libpython link at compile time
# — needed for portable wheels under PEP 599 / manylinux).
# PyO3 0.25 adds Python 3.14 support — needed for users on
# Ubuntu 26 / Fedora 42+ where 3.14 is the system Python. 0.24 was the
# version that fixed the `PyString::from_object` overflow advisory and
# 0.25 keeps that fix. Numpy bumps in lockstep — the two crates pin
# matching versions to each other.
pyo3 = { version = "0.25", features = ["extension-module"] }
# numpy gives us zero-copy `PyArray1`/`PyArray2` constructors and lets us return
# numpy arrays whose memory is owned by Rust without an extra copy.
numpy = "0.25"

[profile.release]
# Wheels ship release builds; tune for runtime perf over compile time.
lto = "thin"
codegen-units = 1
opt-level = 3
