[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "invisensing"
version = "1.0.0"
description = "Python SDK for the Invisensing Audace DAS environment — reads PCIe7821 acquisition files (DAT / HDF5 / TDMS / SEG-Y) and extracts per-channel data (I / Q / arctan / magnitude / phase) via a Rust-backed core."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Invisensing", email = "contact@invisensing.io" },
    { name = "Louis Thievent" },
]
keywords = [
    "DAS",
    "distributed-acoustic-sensing",
    "fiber-optic",
    "geophysics",
    "seismic",
    "PCIe7821",
    "demodulation",
    "audace",
    "hdf5",
    "segy",
    "tdms",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Typing :: Typed",
]
# Default install pulls in every format backend so `pip install invisensing`
# Just Works on DAT, HDF5, TDMS, and SEG-Y captures out of the box. The Rust
# core does the heavy lifting (header parse + de-interleave); these libs are
# only consulted for their format-specific metadata + bytes → numpy step.
dependencies = [
    "numpy>=1.20",
    "h5py>=3.0",
    "npTDMS>=1.6",
    "segyio>=1.9",
]

[project.urls]
Homepage = "https://github.com/invisensing-io/python-lib"
Documentation = "https://invisensing-io.github.io/python-lib/"
Repository = "https://github.com/invisensing-io/python-lib"
Issues = "https://github.com/invisensing-io/python-lib/issues"
Changelog = "https://github.com/invisensing-io/python-lib/releases"

[project.optional-dependencies]
# Aliases retained for backwards compatibility with older installation
# instructions. They are no-ops now — the format backends are part of the
# default install — but `pip install invisensing[hdf5]` still resolves cleanly.
hdf5 = ["h5py>=3.0"]
tdms = ["npTDMS>=1.6"]
segy = ["segyio>=1.9"]
all  = ["h5py>=3.0", "npTDMS>=1.6", "segyio>=1.9"]
dev  = ["pytest>=8.0", "maturin>=1.5"]

[tool.maturin]
# `python-source = "python"` tells maturin where the pure-Python package lives;
# `module-name` tells it the Rust extension is imported as `invisensing._core`,
# so the Rust crate gets copied next to the Python package in the wheel.
python-source = "python"
module-name   = "invisensing._core"
features      = ["pyo3/extension-module"]
# Strip debug symbols from the released wheel — keeps the .so under a few MB.
strip         = true
# Files that should NOT end up in the source distribution. The test
# fixture is 18 MB of synthetic DAS samples — fine to keep in the git
# repo (legacy round-trip test uses it), pointless inside the .tar.gz
# that goes to PyPI (users installing don't run our internal tests).
exclude       = [
    "tests/output/*",
    "tests/assets/*",
    "target/*",
    "Cargo.lock",
    "Docs/*",
    ".github/*",
    "Doxyfile",
    "PUBLISHING.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
